--- a/hoseungshop/src/main/resources/static/css/style.css
+++ b/hoseungshop/src/main/resources/static/css/style.css
@@ -3144,8 +3144,87 @@ ol {
 	width: 100%;
 }
 
-/*--------------------------------- Responsive Media Quaries -----------------------------*/
+/*---------------------
+  Login Page
+-----------------------*/
+.login_page {
+	display: flex;
+    height: 100vh;
+    justify-content: center;
+}
 
+.login_page header {
+	display: flex;
+	justify-content: center;
+}
+
+.login_page form {
+	padding: 10px;
+}
+
+.login_page .input-box {
+	position: relative;
+	margin: 10px 0;
+}
+
+.login_page .input-box>input {
+	background: transparent;
+	border: none;
+	border-bottom: solid 1px #ccc;
+	padding: 20px 0px 5px 0px;
+	font-size: 14pt;
+	width: 100%;
+}
+
+.login_page input::placeholder {
+	color: transparent;
+}
+
+.login_page input:placeholder-shown+label {
+	color: #aaa;
+	font-size: 14pt;
+	top: 15px;
+}
+
+.login_page input:focus+label, label {
+	color: #8aa1a1;
+	font-size: 10pt;
+	pointer-events: none;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	transition: all 0.2s ease;
+	-webkit-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
+}
+
+.login_page input:focus, input:not(:placeholder-shown) {
+	border-bottom: solid 1px #8aa1a1;
+	outline: none;
+}
+
+.login_page input[type=submit] {
+	background-color: #8aa1a1;
+	border: none;
+	color: white;
+	border-radius: 5px;
+	width: 100%;
+	height: 35px;
+	font-size: 14pt;
+	margin-top: 100px;
+}
+
+.login_page #forgot {
+	text-align: right;
+	font-size: 12pt;
+	color: rgb(164, 164, 164);
+	margin: 10px 0px;
+}
+
+
+
+/*--------------------------------- Responsive Media Quaries -----------------------------*/
 @media only screen and (min-width: 1600px) and (max-width: 1900px) {
 	.header {
 		padding: 0 85px;
@@ -3164,6 +3243,11 @@ ol {
 @media only screen and (min-width: 1200px) {
 	.container {
 		max-width: 1170px;
+	}
+	
+	.login {
+	    width: 35%;
+	    margin: auto;
 	}
 }
 
