--- a/hoseungshop/src/main/resources/static/css/style.css
+++ b/hoseungshop/src/main/resources/static/css/style.css
@@ -3153,9 +3153,20 @@ ol {
     justify-content: center;
 }
 
+.login_page .container {
+    width: 30%;
+    margin: auto;
+}
+
 .login_page header {
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+}
+
+.login_page header h2{
+	text-align: center;
+    padding-top: 35px;
 }
 
 .login_page form {
@@ -3212,7 +3223,7 @@ ol {
 	width: 100%;
 	height: 35px;
 	font-size: 14pt;
-	margin-top: 100px;
+	margin-top: 40px;
 }
 
 .login_page #forgot {
@@ -3222,6 +3233,38 @@ ol {
 	margin: 10px 0px;
 }
 
+.login_page #forgot a {
+	font-size: 12px;
+    color: #666666;
+	text-decoration: none;
+}
+
+.login_page .login-join-text {
+    margin-top: 40px;
+    padding: 0 15px;
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+}
+
+.login_page .login-join-text span {
+	font-size: 15px;
+    line-height: 22px;
+    color: #666666;
+}
+
+.login_page .login-join-text a {
+	display: inline-block;
+    box-sizing: border-box;
+    margin-left: 4px;
+    padding: 3px 8px;
+    border: 1px solid #666666;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 21px;
+    color: #666666;
+    text-decoration: none;
+}
 
 
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
@@ -3474,6 +3517,9 @@ ol {
 	.header__right {
 		display: none;
 	}
+	.login_page .container {
+		width: 50%
+	}
 }
 
 /* Wide Mobile = 480px */
@@ -3700,6 +3746,9 @@ ol {
 	}
 	.contact__content {
 		margin-bottom: 40px;
+	}	
+	.login_page .container {
+		width: 50%
 	}
 }
 
@@ -3763,4 +3812,6 @@ ol {
 		width: 100%;
 		font-size: 24px;
 	}
+
+	
 }
